--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,11 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+#Files added manually
 daily_summary_20201030_v2.csv
 merged_daily_normals_tavg.csv
 nasa_monthly.csv
+junk.py
+tmax.2016.nc
+tmin.2016.nc
