--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,26 @@
+alembic==1.4.3
+apispec==1.3.3
+attrs==20.3.0
+Babel==2.9.0
+blinker==1.4
+certifi==2020.12.5
+chardet==3.0.4
+chart-studio==1.1.0
+click==7.1.2
+colorama==0.4.4
+colorlog==4.6.2
 colorlover==0.3.0
+colormap==1.0.3
 dash==1.17.0
-dash_auth==1.4.1
+dash-auth==1.4.1
 dash-core-components==1.13.0
 dash-html-components==1.1.1
 dash-renderer==1.8.3
 dash-table==4.11.0
+defusedxml==0.6.0
+dnspython==2.1.0
+easydev==0.10.1
+email-validator==1.1.2
 Flask==1.1.2
 Flask-Admin==1.5.4
 Flask-AppBuilder==2.3.4
@@ -20,12 +36,46 @@ Flask-Migrate==2.5.2
 Flask-OpenID==1.2.5
 Flask-Paranoid==0.2.0
 Flask-Principal==0.4.0
+Flask-SeaSurf==0.2.2
 Flask-Security-Too==3.4.2
 Flask-SQLAlchemy==2.4.3
 flask-swagger==0.2.13
 Flask-WTF==0.14.3
+future==0.18.2
+gunicorn==20.0.4
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+jsonschema==3.2.0
+Mako==1.1.3
+MarkupSafe==1.1.1
+marshmallow==2.21.0
+marshmallow-enum==1.5.1
+marshmallow-sqlalchemy==0.24.1
 numpy==1.19.0
 pandas==0.25.3
+passlib==1.7.4
+patsy==0.5.1
+pexpect==4.8.0
 plotly==4.12.0
+prison==0.1.3
+ptyprocess==0.7.0
+PyJWT==2.0.0
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+python-editor==1.0.4
+python3-openid==3.2.0
+pytz==2020.5
+PyYAML==5.3.1
 requests==2.23.0
-
+retrying==1.3.3
+scipy==1.6.0
+six==1.15.0
+speaklater==1.3
+SQLAlchemy==1.3.22
+SQLAlchemy-Utils==0.36.8
+statsmodels==0.12.1
+ua-parser==0.10.0
+urllib3==1.25.11
+Werkzeug==1.0.1
+WTForms==2.3.3
